Prevent invalid step input from collapsing

--- a/src/components/StepInput/styles.module.scss
+++ b/src/components/StepInput/styles.module.scss
@@ -18,4 +18,9 @@
 .InvalidInput {
   border: thin solid rgba(255, 0, 0, .7);
   box-shadow: 0 0 5px 1px rgba(255, 0, 0, .5);
+
+  button {
+    cursor: default;
+    pointer-events: none;
+  }
 }
